--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Appable Landing – Modern V3</title>
+    <title>Appable - Software Development Agency</title>
     <!-- Tailwind via CDN (no PostCSS setup required) -->
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
