Add Google Analytics

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Appable - Software Development Agency</title>
     <!-- Tailwind via CDN (no PostCSS setup required) -->
     <script src="https://cdn.tailwindcss.com"></script>
+    
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6GDWQ8Y3DG"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-6GDWQ8Y3DG');
+    </script>
   </head>
   <body class="min-h-screen bg-white text-neutral-900 antialiased">
     <div id="root"></div>
